[package]
name = "experiments-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.7.0"
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
futures = "0.3.25"
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["gzip", "json"] }
serde_json = "1.0.91"
simple_logger = "4.0.0"
tiny-tokio-actor = "0.3.2"
tokio = { version = "1.24.1", features = ["full"] }
